<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Final_Project</string>
    <string name="open"> Open Navigation Drawer</string>
    <string name="close"> Close Navigation Drawer</string>
    <string name="home">home</string>
    <string name="add_event">Add Event</string>
    <string name="setalarm"> Set Alarm</string>
    <string name="show_events"> Show Events</string>
    <string name="Login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="share">Share</string>
    <string name="send">Send</string>

</resources>