<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ShowIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_addevent"
            android:icon="@drawable/add_event"
            android:title="@string/add_event" />

        <item
            android:id="@+id/nav_setalarm"
            android:icon="@drawable/setalarm"
            android:title="@string/setalarm" />

        <item
            android:id="@+id/nav_showevents"
            android:icon="@drawable/show_events"
            android:title="@string/show_events" />
    </group>

    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/login"
                android:title="@string/Login" />

            <item
                android:id="@+id/nav_signup"
                android:icon="@drawable/sign_up"
                android:title="@string/sign_up" />

        </menu>

    </item>


    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share"
                android:title="@string/share" />

            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/send"
                android:title="@string/send" />

        </menu>

    </item>
</menu>